--- a/Demos/app-imagesearch-cogs/ImageSearch/ImageSearch.Droid/ImageSearch.Droid.csproj
+++ b/Demos/app-imagesearch-cogs/ImageSearch/ImageSearch.Droid/ImageSearch.Droid.csproj
@@ -67,14 +67,14 @@
         <Reference Include="System.Xml.Linq" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Xamarin.Essentials" Version="1.6.0-pre2" />
+        <PackageReference Include="Xamarin.Essentials" Version="1.6.0" />
         <PackageReference Include="Refractored.MvvmHelpers" Version="1.6.2" />
-        <PackageReference Include="Acr.UserDialogs" Version="7.1.0.466" />
+        <PackageReference Include="Acr.UserDialogs" Version="7.1.0.470" />
         <PackageReference Include="Microsoft.Azure.CognitiveServices.Search.ImageSearch" Version="2.0.0" />
         <PackageReference Include="Square.Picasso" Version="2.71828.0" />
         <PackageReference Include="AsyncAwaitBestPractices" Version="5.0.2" />
         <PackageReference Include="Xamarin.AndroidX.ExifInterface">
-          <Version>1.1.0.5</Version>
+          <Version>1.3.2.1</Version>
         </PackageReference>
     </ItemGroup>
     <ItemGroup>
