--- a/Demos/app-imagesearch-cogs/ImageSearch/ImageSearch.iOS/ImageSearch.iOS.csproj
+++ b/Demos/app-imagesearch-cogs/ImageSearch/ImageSearch.iOS/ImageSearch.iOS.csproj
@@ -109,9 +109,9 @@
         <Reference Include="System.IO.Compression" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Xamarin.Essentials" Version="1.6.0-pre2" />
+        <PackageReference Include="Xamarin.Essentials" Version="1.6.0" />
         <PackageReference Include="Refractored.MvvmHelpers" Version="1.6.2" />
-        <PackageReference Include="Acr.UserDialogs" Version="7.1.0.466" />
+        <PackageReference Include="Acr.UserDialogs" Version="7.1.0.470" />
         <PackageReference Include="Microsoft.Azure.CognitiveServices.Search.ImageSearch" Version="2.0.0" />
         <PackageReference Include="Xamarin.SDWebImage" Version="4.4.7" />
         <PackageReference Include="AsyncAwaitBestPractices" Version="5.0.2" />
